# virtual-try-on

./: .gitattributes  .gitignore  PLAN.md  README.md  runpod_bootstrap.sh  runpod_connect_setup.ps1  runpod_verify.py
virtual_tryon/: __init__.py  pyproject.toml
virtual_tryon/backend/: README.md
virtual_tryon/comfyui_workflows/: README.md  vton_phase2_klein_4step_sample015.workflow.json
virtual_tryon/configs/: default.yaml  models.yaml  pipeline.yaml  production_vton_template.json  prompts.yaml
virtual_tryon/docs/: api.md  architecture.md  benchmark.md  comfyui_method_workflows.md  comfyui_runpod_usage.md  demo.md  demo_script.md  eval_set_expansion_guide.md  evaluation.md  final_demo_checklist.md  final_presentation_script.md  final_report.md  future_work.md  klein_lora_real_eval.md  limitations.md  model_setup.md  prompting.md  release.md  release_notes_v0.1.0-rc1.md  system_overview_vi.md  tag_release.md
virtual_tryon/final_demo/: __init__.py  config.py
virtual_tryon/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
virtual_tryon/masking/: __init__.py  human_parse_mask.py  local_inpaint_ops.py  manual_mask_loader.py  mask_morphology.py  sam_mask.py  target_extent_mask.py  vton_hybrid_mask.py
virtual_tryon/scripts/: benchmark_idm_runtime_modes.py  benchmark_omnitry_api.py  benchmark_pipeline.py  build_final_output_4method_grids.py  build_final_project_output_grids.py  build_full15_schp_sam_comparison_grid.py  build_klein_local_masked_contact_sheet.py  build_production_vton_debug_sheet.py  build_review_gallery.py  build_three_pipeline_result_grid.py  check_fal_runtime.py  cleanup_outputs.py  comfyui_omnitry_repro.py  comfyui_smoke_sample15.py  create_data_input_eval_set.py  (+45 more)
(+247 files in other folders)
